
	Sam Hocevar:
		* Now really fixed that security issue.

	Stu Redman:
		* Fixed HTTP download if server transmits no content-length
		* Fixed several cases of amulecmd printing zero on big endian machines
		* Fixed amuleweb crashing on tiny downloads
		* Added version resources to MSVC binaries
		* Fixed wrong search text in search dialog after deleting a tab

	Wuischke:
		* Fix amuleweb progress bar display for files > 4GB

	Special Thanks To:
		* stefanero and his bleeding-edge system

--------------------------------------------------------------------------------

Version 2.2.5 - The "never say never" version.
----------
2009-05-16

	GonoszTopi:
		* Fixed possible security hole when previewing filenames containing single quotes
		* Fixed default webserver port

	Stu Redman:
		* Fixed upload of the last part of a file which he broke in 2.2.4
		* Fixed setting speed limits from remote gui's tray icon

	Special Thanks To:
		* CroMag for pointing out the upload problem

--------------------------------------------------------------------------------

Version 2.2.4 - The "we didn't have a .4 version since... well... long ago" version.
----------
2009-04-03

	freddy77:
		* Plugged various memory leaks.

	FreeToGo:
		* Add comment to desktop file to allow autostart in Gnome

	gabrielix:
		* Compilation fix for gcc-4.3.2.

	Gaznevada:
		* Compilation fix for IRIX.
		* Fixed file handles on IRIX.

	GonoszTopi:
		* Fixed compilation of Format.cpp for some platforms.
		* Fixed wxWidgets socket library initialization.
		* Fixed partfile importer destroying imported data.
		* Separated GUI and core code in partfile importer, thus fixing
		  occasional crashes/hangs.
		* Fixed GeoIP-enabled builds crashing on 64b boxes.
		* Added another common URN ID to the Magnet link handler.
		* Switch to the 'busy' cursor while bringing up the preferences
		  window.
		* Ported several Kademlia fixes and improvements from eMule0.49c: